--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
     "start": "live-server . --port=4000 --host=localhost --no-browser",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "webp": "simple-webp-converter"
   },
   "devDependencies": {
     "live-server": "^1.2.2",
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "simple-webp-converter": "^1.0.3"
   }
 }
